# squawk

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  DEVNOTES.txt  README.md  appveyor.yml  exception.cpp  exception.h  global.cpp  global.h  main.cpp  order.h  shared.h  signalcatcher.cpp  signalcatcher.h  signalcatcher_win32.cpp  squawk.rc
cmake/: FindLMDB.cmake  FindSignal.cmake  MacOSXBundleInfo.plist.in
core/: CMakeLists.txt  account.cpp  account.h  adapterFuctions.cpp  archive.cpp  archive.h  conference.cpp  conference.h  contact.cpp  contact.h  lmdb++.h  main.cpp  networkaccess.cpp  networkaccess.h  rosteritem.cpp  rosteritem.h  signalcatcher_win32.cpp  squawk.cpp  squawk.h  storage.cpp  storage.h  urlstorage.cpp  urlstorage.h
core/handlers/: CMakeLists.txt  messagehandler.cpp  messagehandler.h  rosterhandler.cpp  rosterhandler.h
core/passwordStorageEngines/: CMakeLists.txt  kwallet.cpp  kwallet.h
core/passwordStorageEngines/wrappers/: CMakeLists.txt  kwallet.cpp
packaging/: CMakeLists.txt  squawk.desktop
packaging/Archlinux/: PKGBUILD
plugins/: CMakeLists.txt  openfilemanagerwindowjob.cpp
resources/: CMakeLists.txt  resources.qrc
resources/images/: logo.svg~
resources/qml/: feed.qml
shared/: CMakeLists.txt  enums.h  global.cpp  global.h  icons.cpp  icons.h  message.cpp  message.h  messageinfo.cpp  messageinfo.h  shared.h  utils.cpp  utils.h  vcard.cpp  vcard.h
translations/: CMakeLists.txt  main.ts  main_ru.qm  main_ru.qph  main_ru.ts  squawk.pt_BR.ts  squawk.ru.ts
ui/: CMakeLists.txt  account.cpp  account.h  account.ui  accounts.cpp  accounts.h  accounts.ui  conversation.cpp  conversation.h  conversation.ui  messageline.cpp  messageline.h  newcontact.cpp  newcontact.h  newcontact.ui  squawk.cpp  squawk.h  squawk.ui
ui/models/: CMakeLists.txt  abstractparticipant.cpp  abstractparticipant.h  account.cpp  account.h  accounts.cpp  accounts.h  contact.cpp  contact.h  element.cpp  element.h  group.cpp  group.h  item.cpp  item.h  messagefeed.cpp  messagefeed.h  participant.cpp  participant.h  presence.cpp  presence.h  reference.cpp  reference.h  room.cpp  room.h  roster.cpp  roster.h
ui/utils/: CMakeLists.txt  badge.cpp  badge.h  comboboxdelegate.cpp  comboboxdelegate.h  dropshadoweffect.cpp  dropshadoweffect.h  eb.cpp  eb.h  exponentialblur.cpp  exponentialblur.h  feedview.cpp  feedview.h  flowlayout.cpp  flowlayout.h  image.cpp  image.h  message.cpp  message.h  messagedelegate.cpp  messagedelegate.h  messageline.cpp  messageline.h  progress.cpp  progress.h  resizer.cpp  resizer.h  shadowoverlay.cpp  shadowoverlay.h
ui/widgets/: CMakeLists.txt  account.cpp  account.h  account.ui  accounts.cpp  accounts.h  chat.cpp  chat.h  conversation.cpp  conversation.h  conversation.ui  joinconference.cpp  joinconference.h  joinconference.ui  message.cpp  message.h  messageline.cpp  messageline.h  messagetextedit.cpp  messagetextedit.h  newcontact.h  newcontact.ui  room.cpp  room.h  vcard.cpp  vcard.h  vcard.ui
ui/widgets/messageline/: CMakeLists.txt  feedview.cpp  feedview.h  message.cpp  message.h  messagedelegate.cpp  messagedelegate.h  messagefeed.cpp  messagefeed.h  messageline.cpp  preview.cpp  preview.h
ui/widgets/vcard/: CMakeLists.txt  emailsmodel.cpp  emailsmodel.h  phonesmodel.cpp  phonesmodel.h  vcard.cpp  vcard.h  vcard.ui
